@@ -1,3 +1,9 @@
+Mon Sep  3 13:26:19 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/encodings.c (directory_table): Add Bulgarian -> CP1251 and
+	  Vietnamese -> TCVN5712-1.
+	* src/lexgrog.l (bg_name, vi_name): Add.
+
 Mon Sep  3 12:15:55 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/check_mandirs.c (test_manfile): Fix comment typos and
